# Ghost_Shift_-Innovator-

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.stage.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  seed_demo.py  setup.sh
backend/ai_ml/: agent.py  assistant.py  burnout.py  tools.py
backend/config/: database.py  env.py  exceptions.py  logging.py
backend/middleware/: auth.py  rate_limit.py
backend/migrations/: env.py
backend/migrations/versions/: 17af5c6cf007_initial_migration.py  8a3c7d9e2f1b_swap_kind_field.py  9b4d8e2c1f3a_shift_checkin.py  a7c3d8f1b2e4_invite_temp_password.py  d4e5f6a7b8c9_timestamptz_conversion.py
backend/models/: __init__.py  attendance.py  audit.py  availability.py  cert_alert.py  conversation.py  invite.py  leave.py  notification.py  organization.py  peak_risk.py  shift.py  swap.py  user.py
backend/routes/: __init__.py  analytics.py  audit.py  auth.py  availability.py  employee.py  integration.py  invite.py  leave.py  notification.py  organization.py  shift.py  swap.py
backend/schemas/: __init__.py  auth.py
backend/tests/: conftest.py  test_auth.py  test_circuit_breaker.py  test_health.py  test_property_based.py  test_rate_limit.py  test_shifts.py
backend/utils/: circuit_breaker.py  email.py  leave_shifts.py  realtime.py  retry.py
backend/websocket/: app.py
frontend/: .env.production  .env.stage  Dockerfile  FRONTEND_INTEGRATION_DOCS.md  MIGRATION_GUIDE.md  VERIFY_INTEGRATION.sh  (+5 more)
(+55 files in other folders)
